--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "nice-color-palettes": "^3.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
+    "react-animated-css": "^1.2.1",
     "react-dice-roll": "^1.2.2",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
